# calculadora

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/: calculadora.md  index.md  sobre.md
src/calculadora/: core.py
tests/: test_core.py
