[project]
name = "calculadora"
version = "0.1.0"
description = ""
authors = [
    {name = "bea",email = "balimnz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    # Dependências de runtime (produção) devem ir aqui.
    # Neste projeto, não há dependências de produção.
]

[tool.poetry]
packages = [{include = "calculadora", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]
doc = [
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocstrings (>=1.0.0,<2.0.0)",
    "mkdocstrings-python (>=2.0.0,<3.0.0)"
]

[tool.pytest.ini_options]
# CONFIGURAÇÃO CORRIGIDA: Informa ao Pytest onde encontrar os arquivos de teste
testpaths = [
    "tests",
]
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
# Tarefas de formatação e ordenação (Verificação)
lint = "blue --check . && isort --check-only ."

# Tarefas de formatação e ordenação (Aplicação de Correções)
format = "blue . && isort ."

# Executa os testes unitários e mede a cobertura de código
test = "pytest --cov=src/calculadora -vv"

# Inicia o servidor de documentação
docs = "mkdocs serve"

# Tarefa de lint antiga (mantida por referência)
lint1 = "blue --check --diff . && isort --check --diff ."
